# M2614_LaFaceCacheeDeLaLune-Python

./: .gitignore  Doxyfile  M2614.service  README.md  bridge.py  main.py  pyproject.toml
app/: __init__.py  centroid_analysis.py  config.py  routes.py  state.py
static/css/: dashboard.css  doom.css  gather.css
static/js/: dashboard.js  doom.js  gather.js
templates/: base.html  control.html  doom.html  gather.html  monitoring.html
