[project]
name = "M2614_LaFaceCacheeDeLaLune"
version = "0.1.0"
description = "M2614 - Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.0",
    "msgpack>=1.1.2",
    "numpy>=2.4.6",
    "psutil>=7.1.0",
    "requests>=2.34.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
